--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Timeglider JS Timeline Widget: Basic Install</title>
+<title>Timeline of Michigan Archaeology</title>
 
 
 <link rel="stylesheet" href="css/jquery-ui-1.8.5.custom.css" type="text/css" media="screen" title="no title" charset="utf-8">
@@ -25,10 +25,10 @@
 <body>
 
 <div class='header'>
-<h1>Timeglider Widget: Basic Install</h1>
+<h1>Timeline of Michigan Archaeology</h1>
 </div>
 
-<p class='intro'>A simple installation of the Timeglider Widget. View source code for how to implement jQuery widget, script tags, etc.  For full installation instructions, <a href="index.php?p=install">see the installation page</a>.</p>
+<p class='intro'>The alpha version of the timeline.</p>
 
 </div>
 
