--- a/basic.html
+++ b/basic.html
@@ -1,1 +1,11 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<title>Timeline of Michigan Archaeology</title>
+<body>
+
+
+</body>
+</html>
