adding some text

--- a/basic.html
+++ b/basic.html
@@ -5,7 +5,26 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>Timeline of Michigan Archaeology</title>
 <body>
-
+  <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">About
+                        <strong>business casual</strong>
+                    </h2>
+                    <hr>
+                </div>
+                <div class="col-md-6">
+                    <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
+                </div>
+                <div class="col-md-6">
+                    <p>Welcome to my website!</p>
+                    <p>It is fabulous.</p>
+                    <p>I hope you enjoy it.</p>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+</div>
 
 </body>
 </html>
