--- a/basic.html
+++ b/basic.html
@@ -9,8 +9,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">About
-                        <strong>business casual</strong>
+                    <h2 class="intro-text text-center">About Michigan Archaeology and my CHI project
                     </h2>
                     <hr>
                 </div>
