--- a/basic.html
+++ b/basic.html
@@ -24,6 +24,6 @@
                 <div class="clearfix"></div>
             </div>
 </div>
-
+<script src='js/tg-sample-nav.js' type='text/javascript'></script>
 </body>
 </html>
