--- a/basic.html
+++ b/basic.html
@@ -4,6 +4,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>Timeline of Michigan Archaeology</title>
+  <link rel="stylesheet" href="css/jquery-ui-1.8.5.custom.css" type="text/css" media="screen" title="no title" charset="utf-8">
+
+<link rel="stylesheet" href="timeglider/Timeglider.css" type="text/css" media="screen" title="no title" charset="utf-8">
+
+<link rel="stylesheet" href="docs-style.css" type="text/css" media="screen" title="no title" charset="utf-8">
   <script src='js/tg-sample-nav.js' type='text/javascript'></script>
 <body>
   <div class="row">
