--- a/basic.html
+++ b/basic.html
@@ -3,14 +3,18 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+    <script src='js/tg-sample-nav.js' type='text/javascript'></script>
+  
 <title>Timeline of Michigan Archaeology</title>
+  
   <link rel="stylesheet" href="css/jquery-ui-1.8.5.custom.css" type="text/css" media="screen" title="no title" charset="utf-8">
 
 <link rel="stylesheet" href="timeglider/Timeglider.css" type="text/css" media="screen" title="no title" charset="utf-8">
 
 <link rel="stylesheet" href="docs-style.css" type="text/css" media="screen" title="no title" charset="utf-8">
-  <script src='js/tg-sample-nav.js' type='text/javascript'></script>
+
 <body>
+  <div class='tg-sample-nav'>
   <div class="row">
             <div class="box">
                 <div class="col-lg-12">
