--- a/basic.html
+++ b/basic.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-    <script src='js/tg-sample-nav.js' type='text/javascript'></script>
+ 
   
 <title>Timeline of Michigan Archaeology</title>
   
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="docs-style.css" type="text/css" media="screen" title="no title" charset="utf-8">
 
 <body>
-  <div class='tg-sample-nav'>
+    <div class='tg-sample-nav'></div>
   <div class="row">
             <div class="box">
                 <div class="col-lg-12">
@@ -34,6 +34,6 @@
                 <div class="clearfix"></div>
             </div>
 </div>
-
+   <script src='js/tg-sample-nav.js' type='text/javascript'></script>
 </body>
 </html>
