--- a/basic.html
+++ b/basic.html
@@ -29,7 +29,7 @@
 		}
 				
 
-<div class='tg-sample-header'>
+<div class='tg-sample-nav'>
 <h1>Introduction to the Michigan ARchaeology timeline</h1>
 <p>Hello</p>
 </div>
