--- a/basic.html
+++ b/basic.html
@@ -14,7 +14,7 @@
 
 <link rel="stylesheet" href="docs-style.css" type="text/css" media="screen" title="no title" charset="utf-8">
 
-
+	<div class='tg-sample-nav'> </div>
 
 
 <div class='tg-sample-header'>
