--- a/basic.html
+++ b/basic.html
@@ -19,6 +19,7 @@
 
 <div class='tg-sample-header'>
 <h1>Introduction to the Michigan Archaeology Timeline</h1>
+	<body onload=tg-sample-nav()> </body>
 <p>Once more with feeling!</p>
 </div>
 
