--- a/basic.html
+++ b/basic.html
@@ -6,7 +6,7 @@
 
 <script src="js/modernizr.custom.js" type="text/javascript" charset="utf-8"></script>
 
-<title>Introduction to the Michigan Archaeology Timeline</title>
+<title>Timeglider jQuery Plugin</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 
@@ -70,8 +70,8 @@
 
 
 <div class='tg-sample-header'>
-<h1>Introduction to the Michigan Archaeologyn Timeline</h1>
-<p>This project was done with support from a CHI graduate fellowship.</p>
+<h1>Timeglider Widget: The Kitchen Sink</h1>
+<p>For full documentation, go to <a href='http://timeglider.com/widget/?p=api'>our widget API docs</a>. Questions? email Michael: michael@timeglider.com</p>
 </div>
 
 
@@ -504,4 +504,3 @@ tg_instance.updateEvent(updatedEventModel);
 
 </body>
 </html>
-
