--- a/glossary.html
+++ b/glossary.html
@@ -6,7 +6,7 @@
 
 <script src="js/modernizr.custom.js" type="text/javascript" charset="utf-8"></script>
 
-<title>Timeglider jQuery Plugin</title>
+<title>Glossary</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 
@@ -76,8 +76,8 @@
 
 
 <div class='tg-sample-header'>
-<h1>Timeglider Widget: The Kitchen Sink</h1>
-<p>For full documentation, go to <a href='http://timeglider.com/widget/?p=api'>our widget API docs</a>. Questions? email Michael: michael@timeglider.com</p>
+<h1>Glossary of Terms</h1>
+<p>Come here if you don't know a word.</p>
 </div>
 
 
