--- a/intro.html
+++ b/intro.html
@@ -6,7 +6,7 @@
 
 <script src="js/modernizr.custom.js" type="text/javascript" charset="utf-8"></script>
 
-<title>Timeglider jQuery Plugin</title>
+<title>Project Introduction</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 
@@ -70,8 +70,8 @@
 
 
 <div class='tg-sample-header'>
-<h1>Timeglider Widget: The Kitchen Sink</h1>
-<p>For full documentation, go to <a href='http://timeglider.com/widget/?p=api'>our widget API docs</a>. Questions? email Michael: michael@timeglider.com</p>
+<h1>Project Introduction</h1>
+<p>Insert description of project here.</p>
 </div>
 
 
