--- a/more_info.html
+++ b/more_info.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html" />
-<title>Timeglider jQuery Plugin</title>
+<title>For More Information</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta charset="utf-8" />
 
@@ -66,7 +66,7 @@
 
 
 <div class='tg-sample-header'>
-<h1>Building a user interface for toggling tags.</h1>
+<h1>To learn more, look at these sources.</h1>
 </div>
 
 
