--- a/references.html
+++ b/references.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html" />
-<title>Timeglider jQuery Plugin</title>
+<title>References</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta charset="utf-8" />
 
@@ -33,8 +33,8 @@
 
 
 <div class='tg-sample-header'>
-<h1>Timeglider Widget: Presentation</h1>
-<p>A "presentation" is a timeline widget displaying two or more timelines simultaneously.</p>
+<h1>References Used For This Timeline</h1>
+<p>These are the things I used to make this!</p>
 </div>
 
 
