--- a/more_info.html
+++ b/more_info.html
@@ -8,13 +8,8 @@
 
 
 <link rel="stylesheet" href="css/docs.css" type="text/css" media="screen" title="no title" charset="utf-8">
-
-
 <link rel="stylesheet" href="css/jquery-ui-1.8.5.custom.css" type="text/css" media="screen" title="no title" charset="utf-8">
-
- 
 <link rel="stylesheet" href="docs-style.css" type="text/css" media="screen" title="no title" charset="utf-8">
-
 
 <style type='text/css'>
 		
@@ -42,21 +37,15 @@
 </div>
 
 
-<p> Here is source number 1. 
-	Source number 2.
-
-</p>
+	<p> Here is source number 1. </p>
+	<p> Source number 2.</p>
 
 
 
 	
 
 	<script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript" charset="utf-8"></script>
-
-
-  <script type='text/javascript'>
-	
-</script>
+  <script type='text/javascript'> </script>
 <script src='js/tg-sample-nav.js' type='text/javascript'></script>
 
 
