--- a/more_info.html
+++ b/more_info.html
@@ -1,55 +1,160 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
+
 <meta http-equiv="Content-Type" content="text/html" />
+
 <title>For More Information</title>
+
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
 <meta charset="utf-8" />
-
-
 <link rel="stylesheet" href="css/docs.css" type="text/css" media="screen" title="no title" charset="utf-8">
 <link rel="stylesheet" href="css/jquery-ui-1.8.5.custom.css" type="text/css" media="screen" title="no title" charset="utf-8">
+<link rel="stylesheet" href="timeglider/Timeglider.css" type="text/css" media="screen" title="no title" charset="utf-8">
 <link rel="stylesheet" href="docs-style.css" type="text/css" media="screen" title="no title" charset="utf-8">
 
 <style type='text/css'>
-		
-		#placement {
-			margin:32px;
-			margin-bottom:0;
-			height:400px;
-		}
-		
-		.controls {
-			padding:12px;
-			background:white;
-			margin:32px;
-			height:120px;
-		}
+
+
+
+#placement {
+
+margin:32px;
+
+margin-bottom:0;
+
+height:400px;
+
+}
+
+
+
+.controls {
+
+padding:12px;
+
+background:white;
+
+margin:32px;
+
+height:120px;
+
+}
+
+
+
+.tags-list {
+
+list-style:none;
+
+}
+
+
+
+.tags-list li {
+
+float:left;
+
+font-size:11px;
+
+padding:2px 6px;
+
+background-color:#333;
+
+color:white;
+
+margin:4px;
+
+cursor:pointer;
+
+-webkit-border-radius: 4px;
+
+-moz-border-radius: 4px;
+
+border-radius: 4px;
+
+}
+
+
+
+.tags-list li.selected {
+
+background-color:orange;
+
+}
+
+
+
+.tags-list li:hover, {
+
+background-color:#ccc;
+
+}
+
+
 </style>
 
-
 </head>
+
 <body class='sample'>
 
 
 <div class='tg-sample-header'>
+
 <h1>To learn more, look at these sources.</h1>
+
 </div>
 
 
+
+
+
 	<p> Here is source number 1. </p>
-	<p> Source number 2.</p>
+<p> Source number 2.</p>
+
+
+<script src="js/jquery-1.9.1.min.js" type="text/javascript" charset="utf-8"></script>
+
+<!-- jquery-1.9.1.min.js OR jquery-1.10.1.min.js -->
+
+<script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript" charset="utf-8"></script>
+
+<script src="js/underscore-min.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/backbone-min.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/jquery.tmpl.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/ba-debug.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/ba-tinyPubSub.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/jquery.mousewheel.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/jquery.ui.ipad.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/globalize.js" type="text/javascript" charset="utf-8"></script> 
+<script src="timeglider/TG_Date.js" type="text/javascript" charset="utf-8"></script>
+<script src="timeglider/TG_Org.js" type="text/javascript" charset="utf-8"></script>
+<script src="timeglider/TG_Timeline.js" type="text/javascript" charset="utf-8"></script> 
+<script src="timeglider/TG_TimelineView.js" type="text/javascript" charset="utf-8"></script>
+<script src="timeglider/TG_Mediator.js" type="text/javascript" charset="utf-8"></script> 
+<script src="timeglider/timeglider.timeline.widget.js" type="text/javascript"></script>
+<script src="timeglider/timeglider.datepicker.js" type="text/javascript"></script>
+<script src="js/jquery.jscrollpane.min.js" type="text/javascript"></script>
 
 
 
-	
+<script type='text/javascript'>
 
-	<script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript" charset="utf-8"></script>
-  <script type='text/javascript'> </script>
+
+
+</script>
+
 <script src='js/tg-sample-nav.js' type='text/javascript'></script>
 
 
+
+
+
 </body>
+
 </html>
 
 
