--- a/glossary.html
+++ b/glossary.html
@@ -42,12 +42,8 @@
 <p>Come here if you don't know a word.</p>
 </div>
 
-
-<div id='p1'></div>
-
-
 <p>monkey=primate</p>
-
+<p>Chert:lithic raw material used to make stone tools. Very glassy in appearance. Breaks good.</p>
 
 	<script src="js/json2.js" type="text/javascript" charset="utf-8"></script>
 	
