--- a/glossary.html
+++ b/glossary.html
@@ -43,7 +43,7 @@
 </div>
 
 <p>monkey=primate</p>
-<p>Chert:lithic raw material used to make stone tools. Very glassy in appearance. Breaks good.</p>
+<p>Chert:lithic raw material used to make stone tools. Very glassy in appearance.</p>
 
 	<script src="js/json2.js" type="text/javascript" charset="utf-8"></script>
 	
