--- a/more_info.html
+++ b/more_info.html
@@ -16,7 +16,12 @@
 <link rel="stylesheet" href="timeglider/Timeglider.css" type="text/css" media="screen" title="no title" charset="utf-8">
 <link rel="stylesheet" href="docs-style.css" type="text/css" media="screen" title="no title" charset="utf-8">
 
-<style type='text/css'>
+	<script src="js/jquery-1.9.1.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript" charset="utf-8"></script>
+<script type='text/javascript'></script>
+<script src='js/tg-sample-nav.js' type='text/javascript'></script>
+
+	<style type='text/css'>
 
 
 
@@ -63,42 +68,6 @@ height:120px;
 
 	<p> Here is source number 1. </p>
 <p> Source number 2.</p>
-
-
-<script src="js/jquery-1.9.1.min.js" type="text/javascript" charset="utf-8"></script>
-
-<!-- jquery-1.9.1.min.js OR jquery-1.10.1.min.js -->
-
-<script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript" charset="utf-8"></script>
-
-<script src="js/underscore-min.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/backbone-min.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/jquery.tmpl.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/ba-debug.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/ba-tinyPubSub.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/jquery.mousewheel.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/jquery.ui.ipad.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/globalize.js" type="text/javascript" charset="utf-8"></script> 
-<script src="timeglider/TG_Date.js" type="text/javascript" charset="utf-8"></script>
-<script src="timeglider/TG_Org.js" type="text/javascript" charset="utf-8"></script>
-<script src="timeglider/TG_Timeline.js" type="text/javascript" charset="utf-8"></script> 
-<script src="timeglider/TG_TimelineView.js" type="text/javascript" charset="utf-8"></script>
-<script src="timeglider/TG_Mediator.js" type="text/javascript" charset="utf-8"></script> 
-<script src="timeglider/timeglider.timeline.widget.js" type="text/javascript"></script>
-<script src="timeglider/timeglider.datepicker.js" type="text/javascript"></script>
-<script src="js/jquery.jscrollpane.min.js" type="text/javascript"></script>
-
-
-
-<script type='text/javascript'>
-
-
-
-</script>
-
-<script src='js/tg-sample-nav.js' type='text/javascript'></script>
-
-
 
 
 
