--- a/intro.html
+++ b/intro.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="utf-8" />
 
-
 <script src="js/modernizr.custom.js" type="text/javascript" charset="utf-8"></script>
 
 <title>Project Introduction</title>
@@ -13,15 +12,16 @@
 <link rel="stylesheet" href="css/jquery-ui-1.10.3.custom.css" type="text/css" media="screen" title="no title" charset="utf-8">
 <link rel="stylesheet" href="timeglider/Timeglider.css" type="text/css" media="screen" title="no title" charset="utf-8">
 <link rel="stylesheet" href="docs-style.css" type="text/css" media="screen" title="no title" charset="utf-8">
-
-
-<!-- UNCOMMENT FOR CHECKBOX-STYLE LEGEND ITEMS
-<link rel="stylesheet" href="css/tg_legend_checkboxes.css" type="text/css" media="screen" charset="utf-8">
- -->
-
 <link rel="stylesheet" href="timeglider/timeglider.datepicker.css" type="text/css" media="screen" charset="utf-8">
 
-
+<script src="js/json2.js" type="text/javascript" charset="utf-8"></script>
+	
+	<script src="js/jquery-1.9.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<!-- jquery-1.9.1.min.js  OR  jquery-1.10.1.min.js -->
+	<script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript" charset="utf-8"></script>
+	  <script type='text/javascript'> </script>
+<script src='js/tg-sample-nav.js' type='text/javascript'></script>
+	
 <style type='text/css'>
 		.header {
 			margin:32px;
@@ -32,19 +32,6 @@
 			height:450px;
 		}
 				
-				
-		
-		.timeglider-legend {
-			width:180px;
-		}
-		
-		
-		*.no-select {
-		-moz-user-select: -moz-none;
-		-khtml-user-select: none;
-		-webkit-user-select: none;
-		user-select: none;
-		}
 		</style>
 </head>
 <body class='sample'>
@@ -54,52 +41,11 @@
 <h1>Project Introduction</h1>
 <p>Insert description of project here.</p>
 </div>
-
-
-<div id='p1'></div>
-
-
 <p>More project description.</p>
 
-	<script src="js/json2.js" type="text/javascript" charset="utf-8"></script>
-	
-	<script src="js/jquery-1.9.1.min.js" type="text/javascript" charset="utf-8"></script>
-	<!-- jquery-1.9.1.min.js  OR  jquery-1.10.1.min.js -->
-	<script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript" charset="utf-8"></script>
-	
-	
-	<script src="js/underscore-min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/backbone-min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/jquery.tmpl.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/ba-debug.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/ba-tinyPubSub.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/jquery.mousewheel.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/jquery.ui.ipad.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/globalize.js" type="text/javascript" charset="utf-8"></script>	
-	
-	
-	
-	<script src="timeglider/TG_Date.js" type="text/javascript" charset="utf-8"></script>
-	<script src="timeglider/TG_Org.js" type="text/javascript" charset="utf-8"></script>
-	<script src="timeglider/TG_Timeline.js" type="text/javascript" charset="utf-8"></script> 
-	<script src="timeglider/TG_TimelineView.js" type="text/javascript" charset="utf-8"></script>
-	<script src="timeglider/TG_Mediator.js" type="text/javascript" charset="utf-8"></script> 
-	<script src="timeglider/timeglider.timeline.widget.js" type="text/javascript"></script>
-	
-	<script src="timeglider/timeglider.datepicker.js" type="text/javascript"></script>
 
 	
-	<script src="js/jquery.jscrollpane.min.js" type="text/javascript"></script>
-
 	
-	<!-- JUST FOR KITCHEN SINK: NOT NEEDED FOR TG WIDGET -->
-	<script src="js/jquery.ui.sortable.js" type="text/javascript" charset="utf-8"></script>
-	
-	
-
-  <script type='text/javascript'>	
-</script>
-<script src='js/tg-sample-nav.js' type='text/javascript'></script>
 
 </body>
 </html>
