--- a/intro.html
+++ b/intro.html
@@ -38,10 +38,10 @@
 
 
 <div class='tg-sample-header'>
-<h1>Project Introduction</h1>
-<p>Insert description of project here.</p>
+<h1>The Development of the Archaeological Timeline of Michigan</h1>
+<p>This project was conceived in part thanks to a CHI fellowship through Michigan State University.  I wanted to create an easy to use, creative, and simple way to demonstrate the depth of history in Michigan.</p>
 </div>
-<p>More project description.</p>
+<p>Here you will find the results of my work: an interactive timeline highlighting some of the most significant archaeological sites throughout Michigan.</p>
 
 
 	
