--- a/glossary.html
+++ b/glossary.html
@@ -47,11 +47,9 @@
 
 <div class='tg-sample-header'>
 <h1>Glossary of Terms</h1>
-<p>Come here if you don't know a word.</p>
 </div>
 
-<p>monkey=primate</p>
-<p>Chert:lithic raw material used to make stone tools. Very glassy in appearance.</p>
+	<p><b>Archaeology</b>: the scientific study of past human cultures by analyzing the material remains (sites and artifacts) that people left behind.  </p>
 
 	
 
