--- a/glossary.html
+++ b/glossary.html
@@ -50,9 +50,68 @@
 </div>
 
 	<p><b>Archaeology</b>: the scientific study of past human cultures by analyzing the material remains (sites and artifacts) that people left behind.  </p>
-
-	
-
+	<p><b>Archaeological site</b>: a place where human activity occurred and material remains were deposited. </p>
+	<p><b>Artifact</b>: any object made, modified, or used by people.  </p>
+<p><b>Assemblage</b>:
+    artifacts that are found together and that presumably were used at the same time or for similar or related tasks.</p>
+<p><b>Attribute</b>:
+    a characteristic or property of an object, such as weight, size, or color.</p>
+<p><b>B.P.</b>:
+    years before present; as a convention, 1950 is the year from which B.P. dates are calculated.</p>
+<p><b>Ceramic</b>:
+    pottery, fired clay.</p>
+<p><b>Chronology</b>:
+    an arrangement of events in the order in which they occurred.</p>
+<p><b>Classification</b>:
+    a systematic arrangement in groups or categories according to criteria.</p>
+<p><b>Context</b>:
+    the relationship of artifacts and other cultural remains to each other and the situation in which they are found.</p>
+<p><b>Culture</b>:
+    a set of learned beliefs, values and behaviors--the way of life--shared by the members of a society.</p>
+<p><b>Debitage</b>:
+    the by-products or waste materials left over from the manufacture of stone tools.</p>
+<p><b>Diagnostic artifact</b>:
+    an item that is indicative of a particular time period and/or cultural group.</p>
+<p><b>Excavation</b>:
+    the systematic digging and recording of an archaeological site.</p>
+<p><b>Experimental archaeology</b>:
+    scientific studies designed to discover processes that produced and/or modified artifacts and sites.</p>
+<p><b>Feature</b>:
+    a type of material remain that cannot be removed from a site such as roasting pits, fire hearths, house floors or post molds.</p>
+<p><b>Grid</b>:
+    a network of uniformly spaced squares that divides a site into units; used to measure and record an object's position in space.</p>
+<p><b>In situ</b>:
+    in the original place.</p>
+<p><b>Level</b>:
+    an excavation layer, which may correspond to natural strata. Levels are numbered from the top to bottom of the excavation unit, with the uppermost level being Level 1.</p>
+<p><b>Lithic</b>:
+    stone, or made of stone.</p>
+<p><b>Material remains</b>:
+    artifacts, features and other items such as plant and animal remains that indicate human activity.</p>
+<p><b>Midden</b>:
+    an area used for trash disposal.</p>
+<p><b>Post mold / post hole</b>:
+    a type of feature; a circular stain left in the ground after a wooden post has decayed; usually indicates the former existence of a house or fence.</p>
+<p><b>Pot sherd</b>:
+    a piece of broken pottery.</p>
+<p><b>Prehistoric</b>:
+    the period of time before written records; the absolute date for the prehistoric period varies from place to place.</p>
+<p><b>Projectile point</b>:
+    a general term for stone points that were hafted to darts, spears or arrows; often erroneously called "arrowheads".</p>
+<p><b>Rock art</b>:
+    a general term for pecked, incised, or painted figures on rock.</p>
+<p><b>Site</b>:
+    a place where human activity occurred and material remains were deposited.</p>
+<p><b>Site steward</b>:
+    a volunteer who visits a site and helps protect it form vandalism and looting.</p>
+<p><b>Strata</b>:
+    many layers of earth or levels in an archaeological site (singular stratum).</p>
+<p><b>Stratigraphy</b>:
+    the layering of deposits in archaeological sites. Cultural remains and natural sediments become buried over time, forming strata.</p>
+<p><b>Survey</b>:
+    the systematic examination of the ground surface in search of archaeological sites.</p>
+<p><b>Test pit</b>:
+    a small excavation unit dug to learn what the depth and character of the stratum might be, and to determine more precisely which strata contain artifacts and other material remains.</p>
 </body>
 </html>
 
