--- a/glossary.html
+++ b/glossary.html
@@ -59,7 +59,8 @@
 <p><b>B.P.</b>: years before present; as a convention, 1950 is the year from which B.P. dates are calculated.</p>
 	<p><b>Cache (pronounced "cash")</b>: a collection of objects that was purposefully buried.</p>
 	<p><b>Ceramic</b>: pottery, fired clay.</p>
-<p><b>Chronology</b>: an arrangement of events in the order in which they occurred.</p>
+	<p><b>Chipped stone tool</b>: stone tool made by striking a stone (core or preform) with another stone (hammerstone) or other hard material (such as antler). Small pieces of stone (flakes) were struck off the core in a controlled and precise manner to create a usable shape (arrow heads, spear points, knives, etc.). The two main techniques of creating chipped tools were direct percussion (the core is struck directly with a hammerstone) and indirect percussion (another object is placed between the core and the hammerstone).</p>
+	<p><b>Chronology</b>: an arrangement of events in the order in which they occurred.</p>
 <p><b>Classification</b>: a systematic arrangement in groups or categories according to criteria.</p>
 <p><b>Context</b>: the relationship of artifacts and other cultural remains to each other and the situation in which they are found.</p>
 <p><b>Culture</b>: a set of learned beliefs, values and behaviors--the way of life--shared by the members of a society.</p>
