--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <h1>Timeline of Michigan Archaeology</h1>
 </div>
 
-<p class='intro'>The alpha version of the timeline.</p>
+<p class='intro'>The alpha version of the timeline. If you are viewing this timeline now, please be aware that the information contained in it is NOT the final version and may not be accurate.</p>
 
 </div>
 
