--- a/references.html
+++ b/references.html
@@ -42,7 +42,7 @@
 <h1>References Used For This Timeline</h1>
 <p>These are the things I used to make this!</p>
 </div>
-	<p> Source Number 1. </p>
+<p> Erickson, Jim.  2016. <i> U-M-led team recovers 'most complete mastodon skeleton in many decades' from Thumb site. </i> Michigan News, University of Michigan. A pdf version of the article is available <a href="mastodon2.pdf"> here </a></p>
 <p> Source Number 2. </p>
 
 </body>
