--- a/references.html
+++ b/references.html
@@ -43,7 +43,7 @@
 <p>These are the things I used to make this!</p>
 </div>
 <p> Erickson, Jim.  2016. <i> U-M-led team recovers 'most complete mastodon skeleton in many decades' from Thumb site. </i> Michigan News, University of Michigan. A pdf version of the article is available <a href="mastodon2.pdf"> here </a>.</p>
-<p> Kozlowski, Kim. 2016. <i> Mastodon bones discovered in Michigan's thumb region. </i> <a href="mastodon.pdf"> Detroit News.</a> </p>
+<p> Kozlowski, Kim. 2016. <i> Mastodon bones discovered in Michigan's thumb region. </i> <a href="Mastodon.pdf"> Detroit News.</a> </p>
 
 </body>
 </html>
