--- a/glossary.html
+++ b/glossary.html
@@ -73,7 +73,7 @@
 <p><b>In situ</b>: in the original place.</p>
 <p><b>Level</b>: an excavation layer, which may correspond to natural strata. Levels are numbered from the top to bottom of the excavation unit, with the uppermost level being Level 1.</p>
 <p><b>Lithic</b>: stone, or made of stone.</p>
-<p><b>Mammoth</b>: any large, <a href="img/mammoth1.jpg"> elephantlike mammal</a> of the extinct genus Mammuthus, from the Pleistocene Epoch, having hairy skin and ridged molar teeth.</p>
+	<p><b><a id="term1">Mammoth</a></b>: any large, <a href="img/mammoth1.jpg"> elephantlike mammal</a> of the extinct genus Mammuthus, from the Pleistocene Epoch, having hairy skin and ridged molar teeth.</p>
 <p><b>Mastodon</b>: a massive, <a href="img/mastodon1.jpg"> elephantlike mammal</a> of the genus Mammut (Mastodon), that flourished worldwide from the Miocene through the Pleistocene epochs and, in North America, into recent times, having long, curved upper tusks and, in the male, short lower tusks.</p>
 <p><b>Material remains</b>: artifacts, features and other items such as plant and animal remains that indicate human activity.</p>
 <p><b>Midden</b>: an area used for trash disposal.</p>
