--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	/* defining the frame for the widget */
 		#placement {
 			margin:32px;
-			height:550px;
+			height:700px;
 		}
 </style>
 
@@ -74,10 +74,10 @@
 			
 				"min_zoom":1, 
 				"max_zoom":55, 
-				"image_lane_height":100,
+				"image_lane_height":150,
 				"icon_folder":"timeglider/icons/",
 				"data_source":"json/js_history.json",
-				"constrain_to_data": false
+				"constrain_to_data": true
 		});
 		
 		
