--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				"image_lane_height":150,
 				"icon_folder":"timeglider/icons/",
 				"data_source":"json/js_history.json",
-				"constrain_to_data": true
+				"constrain_to_data": false
 		});
 		
 		
