--- a/glossary.html
+++ b/glossary.html
@@ -78,7 +78,8 @@
 <p id="mastodon"><b> Mastodon</b>: a massive, <a href="img/mastodon1.jpg"> elephantlike mammal</a> of the genus Mammut (Mastodon), that flourished worldwide from the Miocene through the Pleistocene epochs and, in North America, into recent times, having long, curved upper tusks and, in the male, short lower tusks.</p>
 <p><b>Material remains</b>: artifacts, features and other items such as plant and animal remains that indicate human activity.</p>
 <p><b>Midden</b>: an area used for trash disposal.</p>
-<p><b>Post mold / post hole</b>: a type of feature; a circular stain left in the ground after a wooden post has decayed; usually indicates the former existence of a house or fence.</p>
+	<p id="paleo-indian"><b>Paleo-Indian</b>: an archaeological classification for those people who inhabited the Americans during the Late Pleistocene, the end of the last Ice Age. </p>
+	<p><b>Post mold / post hole</b>: a type of feature; a circular stain left in the ground after a wooden post has decayed; usually indicates the former existence of a house or fence.</p>
 <p><b>Pot sherd</b>: a piece of broken pottery.</p>
 <p><b>Prehistoric</b>: the period of time before written records; the absolute date for the prehistoric period varies from place to place.</p>
 <p><b>Projectile point</b>: a general term for stone points that were hafted to darts, spears or arrows; often erroneously called "arrowheads".</p>
