--- a/glossary.html
+++ b/glossary.html
@@ -65,7 +65,7 @@
 <p><b>Classification</b>: a systematic arrangement in groups or categories according to criteria.</p>
 <p><b>Context</b>: the relationship of artifacts and other cultural remains to each other and the situation in which they are found.</p>
 <p><b>Culture</b>: a set of learned beliefs, values and behaviors--the way of life--shared by the members of a society.</p>
-<p><b>Debitage</b>: the by-products or waste materials left over from the manufacture of stone tools.</p>
+<p id="debitage"><b>Debitage</b>: the by-products or waste materials left over from the manufacture of stone tools.</p>
 <p><b>Diagnostic artifact</b>: an item that is indicative of a particular time period and/or cultural group.</p>
 <p><b>Excavation</b>: the systematic digging and recording of an archaeological site.</p>
 <p><b>Experimental archaeology</b>: scientific studies designed to discover processes that produced and/or modified artifacts and sites.</p>
