--- a/glossary.html
+++ b/glossary.html
@@ -60,11 +60,12 @@
 	<p><b>Cache (pronounced "cash")</b>: a collection of objects that was purposefully buried.</p>
 	<p><b>Ceramic</b>: pottery, fired clay.</p>
 <p id="chert"><b>Chert</b>: a compact rock consisting essentially of microcrystalline quartz. Used for making stone tools.</p>
-	<p><b>Chipped stone tool</b>: stone tool made by striking a stone (core or preform) with another stone (hammerstone) or other hard material (such as antler). Small pieces of stone (flakes) were struck off the core in a controlled and precise manner to create a usable shape (arrow heads, spear points, knives, etc.). The two main techniques of creating chipped tools were direct percussion (the core is struck directly with a hammerstone) and indirect percussion (another object is placed between the core and the hammerstone).</p>
+<p id="chipped"><b>Chipped stone tool</b>: stone tool made by striking a stone (core or preform) with another stone (hammerstone) or other hard material (such as antler). Small pieces of stone (flakes) were struck off the core in a controlled and precise manner to create a usable shape (arrow heads, spear points, knives, etc.). The two main techniques of creating chipped tools were direct percussion (the core is struck directly with a hammerstone) and indirect percussion (another object is placed between the core and the hammerstone).</p>
 	<p><b>Chronology</b>: an arrangement of events in the order in which they occurred.</p>
 <p><b>Classification</b>: a systematic arrangement in groups or categories according to criteria.</p>
-	<p id="component"><b>Component</b>: a site or layer that belongs to one culture and is interpreted as the remains of a single people during a relatively brief period of time.</p>
-	<p><b>Context</b>: the relationship of artifacts and other cultural remains to each other and the situation in which they are found.</p>
+<p id="component"><b>Component</b>: a site or layer that belongs to one culture and is interpreted as the remains of a single people during a relatively brief period of time.</p>
+<p><b>Context</b>: the relationship of artifacts and other cultural remains to each other and the situation in which they are found.</p>
+<p id="core"><b>Core</b>:A core is the base rock from which flakes are broken off to make chipped stone tools. You can learn more about cores <a href="https://en.wikipedia.org/wiki/Lithic_core">here</a>.</p>
 <p><b>Culture</b>: a set of learned beliefs, values and behaviors--the way of life--shared by the members of a society.</p>
 <p id="debitage"><b>Debitage</b>: the by-products or waste materials left over from the manufacture of stone tools.</p>
 <p><b>Diagnostic artifact</b>: an item that is indicative of a particular time period and/or cultural group.</p>
