--- a/glossary.html
+++ b/glossary.html
@@ -71,7 +71,7 @@
 <p><b>Diagnostic artifact</b>: an item that is indicative of a particular time period and/or cultural group.</p>
 <p><b>Excavation</b>: the systematic digging and recording of an archaeological site.</p>
 <p><b>Experimental archaeology</b>: scientific studies designed to discover processes that produced and/or modified artifacts and sites.</p>
-<p><b>Feature</b>: a type of material remain that cannot be removed from a site such as roasting pits, fire hearths, house floors or post molds.</p>
+<p id="feature"><b>Feature</b>: a type of material remain that cannot be removed from a site such as roasting pits, fire hearths, house floors or post molds.</p>
 <p><b>Grid</b>: a network of uniformly spaced squares that divides a site into units; used to measure and record an object's position in space.</p>
 <p><b>In situ</b>: in the original place.</p>
 <p><b>Level</b>: an excavation layer, which may correspond to natural strata. Levels are numbered from the top to bottom of the excavation unit, with the uppermost level being Level 1.</p>
