--- a/glossary.html
+++ b/glossary.html
@@ -74,14 +74,16 @@
 <p id="feature"><b>Feature</b>: a type of material remain that cannot be removed from a site such as roasting pits, fire hearths, house floors or post molds.</p>
 <p><b>Grid</b>: a network of uniformly spaced squares that divides a site into units; used to measure and record an object's position in space.</p>
 <p><b>In situ</b>: in the original place.</p>
-<p><b>Level</b>: an excavation layer, which may correspond to natural strata. Levels are numbered from the top to bottom of the excavation unit, with the uppermost level being Level 1.</p>
+	<p id="latewoodland"><b>Late Woodland</b>: this archaeological classification is used for the people who lived from AD 500 to contact with Europeans.</p>
+	<p><b>Level</b>: an excavation layer, which may correspond to natural strata. Levels are numbered from the top to bottom of the excavation unit, with the uppermost level being Level 1.</p>
 <p><b>Lithic</b>: stone, or made of stone.</p>
 <p id="mammoth"><b>Mammoth</b>: any large, <a href="img/mammoth1.jpg"> elephantlike mammal</a> of the extinct genus Mammuthus, from the Pleistocene Epoch, having hairy skin and ridged molar teeth.</p>
 <p id="mastodon"><b> Mastodon</b>: a massive, <a href="img/mastodon1.jpg"> elephantlike mammal</a> of the genus Mammut (Mastodon), that flourished worldwide from the Miocene through the Pleistocene epochs and, in North America, into recent times, having long, curved upper tusks and, in the male, short lower tusks.</p>
 <p><b>Material remains</b>: artifacts, features and other items such as plant and animal remains that indicate human activity.</p>
 <p id="midden"><b>Midden</b>: an area used for trash disposal.</p>
 <p id="middlearchaic"><b>Middle Archaic</b>: this archaeological classification is used for those people who lived here from about 8,000 to 5,000 years ago.  This was a time of changing climatic conditions in which the area may have become significantly drier and warmer than it is today.</p>	
-<p id="paleo-indian"><b>Paleo-Indian</b>: an archaeological classification for those people who inhabited the Americans during the Late Pleistocene, the end of the last Ice Age. </p>
+	<p id="middlewoodland"><b>Middle Woodland</b>:in the classification of archaeological cultures, the Middle Woodland period spanned a period from roughly 200 BC to AD 500.</p> 
+	<p id="paleo-indian"><b>Paleo-Indian</b>: an archaeological classification for those people who inhabited the Americans during the Late Pleistocene, the end of the last Ice Age. </p>
 	<p><b>Post mold / post hole</b>: a type of feature; a circular stain left in the ground after a wooden post has decayed; usually indicates the former existence of a house or fence.</p>
 <p><b>Pot sherd</b>: a piece of broken pottery.</p>
 <p><b>Prehistoric</b>: the period of time before written records; the absolute date for the prehistoric period varies from place to place.</p>
