--- a/references.html
+++ b/references.html
@@ -39,8 +39,7 @@
 
 
 <div class='tg-sample-header'>
-<h1>References Used For This Timeline</h1>
-<p>These are the things I used to make this!</p>
+<h1>References Used For Creating This Timeline</h1>
 </div>
 <p> Erickson, Jim.  2016. <i> U-M-led team recovers 'most complete mastodon skeleton in many decades' from Thumb site. </i> Michigan News, University of Michigan. A pdf version of the article is available <a href="mastodon2.pdf"> here </a>.</p>
 <p> Fairchild, Jerry. 1977. <i> The Schmidt Site: A Pre-Nipissing Village in the Saginaw Valley, Michigan.</i> Master's Thesis. Department of Anthropology, Western Michigan University.</p>
