--- a/more_info.html
+++ b/more_info.html
@@ -58,17 +58,12 @@ height:120px;
 
 <div class='tg-sample-header'>
 
-<h1>To learn more, look at these sources.</h1>
+<h1>To learn more about Michigan archaeology, check out some of these sources.</h1>
 
 </div>
 
 
-
-
-
-	<p> Here is source number 1. </p>
-<p> Source number 2.</p>
-	<p> Words so I know it updated.</p>
+<p> Halsey, John, editor.  1999. <i> Retrieving Michigan's Buried Past: The Archaeology of the Great Lakes State.</i> Cranbrook Institute of Science, Bulletin 64. </p>
 
 
 
