--- a/glossary.html
+++ b/glossary.html
@@ -73,7 +73,8 @@
 <p><b>Experimental archaeology</b>: scientific studies designed to discover processes that produced and/or modified artifacts and sites.</p>
 <p id="feature"><b>Feature</b>: a type of material remain that cannot be removed from a site such as roasting pits, fire hearths, house floors or post molds.</p>
 <p><b>Grid</b>: a network of uniformly spaced squares that divides a site into units; used to measure and record an object's position in space.</p>
-<p><b>In situ</b>: in the original place.</p>
+	<p id="hearth"><b>Hearth</b>: the location of a fire.</p>
+	<p><b>In situ</b>: in the original place.</p>
 	<p id="latewoodland"><b>Late Woodland</b>: this archaeological classification is used for the people who lived from AD 500 to contact with Europeans.</p>
 	<p><b>Level</b>: an excavation layer, which may correspond to natural strata. Levels are numbered from the top to bottom of the excavation unit, with the uppermost level being Level 1.</p>
 <p><b>Lithic</b>: stone, or made of stone.</p>
@@ -88,7 +89,8 @@
 <p><b>Pot sherd</b>: a piece of broken pottery.</p>
 <p><b>Prehistoric</b>: the period of time before written records; the absolute date for the prehistoric period varies from place to place.</p>
 <p><b>Projectile point</b>: a general term for stone points that were hafted to darts, spears or arrows; often erroneously called "arrowheads".</p>
-<p><b>Rock art</b>: a general term for pecked, incised, or painted figures on rock.</p>
+	<p id="carbon"><b>Radiocarbon dating</b>: a method for determining the age of an object containing organic material by using the properties of radiocarbon (C14), a radioactive isotope of carbon.</p>
+	<p><b>Rock art</b>: a general term for pecked, incised, or painted figures on rock.</p>
 <p><b>Site</b>: a place where human activity occurred and material remains were deposited.</p>
 <p><b>Site steward</b>:  a volunteer who visits a site and helps protect it form vandalism and looting.</p>
 <p><b>Strata</b>: many layers of earth or levels in an archaeological site (singular stratum).</p>
