--- a/glossary.html
+++ b/glossary.html
@@ -94,7 +94,8 @@
 <p><b>Site</b>: a place where human activity occurred and material remains were deposited.</p>
 <p><b>Site steward</b>:  a volunteer who visits a site and helps protect it form vandalism and looting.</p>
 <p><b>Strata</b>: many layers of earth or levels in an archaeological site (singular stratum).</p>
-<p><b>Stratigraphy</b>: the layering of deposits in archaeological sites. Cultural remains and natural sediments become buried over time, forming strata.</p>
+	<p id="stratified"><b>Stratified</b>: divided into distinct layers. </p>
+	<p><b>Stratigraphy</b>: the layering of deposits in archaeological sites. Cultural remains and natural sediments become buried over time, forming strata.</p>
 <p><b>Survey</b>: the systematic examination of the ground surface in search of archaeological sites.</p>
 <p><b>Test pit</b>: a small excavation unit dug to learn what the depth and character of the stratum might be, and to determine more precisely which strata contain artifacts and other material remains.</p>
 </body>
