--- a/glossary.html
+++ b/glossary.html
@@ -85,6 +85,7 @@
 <p id="middlearchaic"><b>Middle Archaic</b>: this archaeological classification is used for those people who lived here from about 8,000 to 5,000 years ago.  This was a time of changing climatic conditions in which the area may have become significantly drier and warmer than it is today.</p>	
 	<p id="middlewoodland"><b>Middle Woodland</b>:in the classification of archaeological cultures, the Middle Woodland period spanned a period from roughly 200 BC to AD 500.</p> 
 	<p id="paleo-indian"><b>Paleo-Indian</b>: an archaeological classification for those people who inhabited the Americans during the Late Pleistocene, the end of the last Ice Age. </p>
+	<p id="paleosol"><b>Paleosol</b>: a strata that was formed as a soil in a past geological period.
 	<p><b>Post mold / post hole</b>: a type of feature; a circular stain left in the ground after a wooden post has decayed; usually indicates the former existence of a house or fence.</p>
 <p><b>Pot sherd</b>: a piece of broken pottery.</p>
 <p><b>Prehistoric</b>: the period of time before written records; the absolute date for the prehistoric period varies from place to place.</p>
