--- a/glossary.html
+++ b/glossary.html
@@ -93,7 +93,8 @@
 <p><b>Projectile point</b>: a general term for stone points that were hafted to darts, spears or arrows; often erroneously called "arrowheads".</p>
 	<p id="carbon"><b>Radiocarbon dating</b>: a method for determining the age of an object containing organic material by using the properties of radiocarbon (C14), a radioactive isotope of carbon.</p>
 	<p><b>Rock art</b>: a general term for pecked, incised, or painted figures on rock.</p>
-<p><b>Site</b>: a place where human activity occurred and material remains were deposited.</p>
+	<p id="sherd"><b>Sherd</b>: a fragment of pottery.</p>
+	<p><b>Site</b>: a place where human activity occurred and material remains were deposited.</p>
 <p><b>Site steward</b>:  a volunteer who visits a site and helps protect it form vandalism and looting.</p>
 <p><b>Strata</b>: many layers of earth or levels in an archaeological site (singular stratum).</p>
 	<p id="stratified"><b>Stratified</b>: divided into distinct layers. </p>
