--- a/glossary.html
+++ b/glossary.html
@@ -48,20 +48,20 @@
 <div class='tg-sample-header'>
 <h1>Glossary of Terms</h1>
 </div>
-	<p><b>Absolute Dating</b>: collective term for techniques that assign specific dates or date ranges, in calendar years, to artifacts and other archaeological finds. Dates are determined by a variety of processes, including chemical analyses (as in radiocarbon dating and thermoluminescence), data correlation (as in dendrochronology), and a variety of other tests. See Relative Dating.</p>
-	<p><b>AMS</b>: Accelerator Mass Spectrometry is an absolute dating technique that measures the amount of carbon-14 in an organic object and provides a rough indication of its age.</p>
-	<p><b>Anthropology</b>: the study of human beings, including their behavior, biology, linguistics, and social and cultural variations. In the United States, anthropology is divided into four sub-disciplines: archaeology, biological/physical anthropology, cultural anthropology, and linguistics. All the sub-disciplines study aspects of past or present humans. Archaeologists generally study the physical and material remains of ancient societies, while cultural anthropologists study living cultures. Physical anthropologists study human skeletons and other bodily remains. Biological anthropologists deal primarily with the evolution of humans and primates. Linguists study languages, especially their development and their function within human culture.</p>
-	<p><b>Archaeology</b>: the scientific study of past human cultures by analyzing the material remains (sites and artifacts) that people left behind.  </p>
-	<p><b>Archaeological site</b>: a place where human activity occurred and material remains were deposited. </p>
-	<p><b>Artifact</b>: any object made, modified, or used by people.  </p>
+<p><b>Absolute Dating</b>: collective term for techniques that assign specific dates or date ranges, in calendar years, to artifacts and other archaeological finds. Dates are determined by a variety of processes, including chemical analyses (as in radiocarbon dating and thermoluminescence), data correlation (as in dendrochronology), and a variety of other tests. See Relative Dating.</p>
+<p><b>AMS</b>: Accelerator Mass Spectrometry is an absolute dating technique that measures the amount of carbon-14 in an organic object and provides a rough indication of its age.</p>
+<p><b>Anthropology</b>: the study of human beings, including their behavior, biology, linguistics, and social and cultural variations. In the United States, anthropology is divided into four sub-disciplines: archaeology, biological/physical anthropology, cultural anthropology, and linguistics. All the sub-disciplines study aspects of past or present humans. Archaeologists generally study the physical and material remains of ancient societies, while cultural anthropologists study living cultures. Physical anthropologists study human skeletons and other bodily remains. Biological anthropologists deal primarily with the evolution of humans and primates. Linguists study languages, especially their development and their function within human culture.</p>
+<p><b>Archaeology</b>: the scientific study of past human cultures by analyzing the material remains (sites and artifacts) that people left behind.  </p>
+<p><b>Archaeological site</b>: a place where human activity occurred and material remains were deposited. </p>
+<p><b>Artifact</b>: any object made, modified, or used by people.  </p>
 <p><b>Assemblage</b>: artifacts that are found together and that presumably were used at the same time or for similar or related tasks.</p>
 <p><b>Attribute</b>: a characteristic or property of an object, such as weight, size, or color.</p>
 <p><b>B.P.</b>: years before present; as a convention, 1950 is the year from which B.P. dates are calculated.</p>
-	<p><b>Cache (pronounced "cash")</b>: a collection of objects that was purposefully buried.</p>
-	<p><b>Ceramic</b>: pottery, fired clay.</p>
+<p><b>Cache (pronounced "cash")</b>: a collection of objects that was purposefully buried.</p>
+<p><b>Ceramic</b>: pottery, fired clay.</p>
 <p id="chert"><b>Chert</b>: a compact rock consisting essentially of microcrystalline quartz. Used for making stone tools.</p>
 <p id="chipped"><b>Chipped stone tool</b>: stone tool made by striking a stone (core or preform) with another stone (hammerstone) or other hard material (such as antler). Small pieces of stone (flakes) were struck off the core in a controlled and precise manner to create a usable shape (arrow heads, spear points, knives, etc.). The two main techniques of creating chipped tools were direct percussion (the core is struck directly with a hammerstone) and indirect percussion (another object is placed between the core and the hammerstone).</p>
-	<p><b>Chronology</b>: an arrangement of events in the order in which they occurred.</p>
+<p><b>Chronology</b>: an arrangement of events in the order in which they occurred.</p>
 <p><b>Classification</b>: a systematic arrangement in groups or categories according to criteria.</p>
 <p id="component"><b>Component</b>: a site or layer that belongs to one culture and is interpreted as the remains of a single people during a relatively brief period of time.</p>
 <p><b>Context</b>: the relationship of artifacts and other cultural remains to each other and the situation in which they are found.</p>
@@ -73,10 +73,10 @@
 <p><b>Experimental archaeology</b>: scientific studies designed to discover processes that produced and/or modified artifacts and sites.</p>
 <p id="feature"><b>Feature</b>: a type of material remain that cannot be removed from a site such as roasting pits, fire hearths, house floors or post molds.</p>
 <p><b>Grid</b>: a network of uniformly spaced squares that divides a site into units; used to measure and record an object's position in space.</p>
-	<p id="hearth"><b>Hearth</b>: the location of a fire.</p>
-	<p><b>In situ</b>: in the original place.</p>
-	<p id="latewoodland"><b>Late Woodland</b>: this archaeological classification is used for the people who lived from AD 500 to contact with Europeans.</p>
-	<p><b>Level</b>: an excavation layer, which may correspond to natural strata. Levels are numbered from the top to bottom of the excavation unit, with the uppermost level being Level 1.</p>
+<p id="hearth"><b>Hearth</b>: the location of a fire.</p>
+<p><b>In situ</b>: in the original place.</p>
+<p id="latewoodland"><b>Late Woodland</b>: this archaeological classification is used for the people who lived from AD 500 to contact with Europeans.</p>
+<p><b>Level</b>: an excavation layer, which may correspond to natural strata. Levels are numbered from the top to bottom of the excavation unit, with the uppermost level being Level 1.</p>
 <p><b>Lithic</b>: stone, or made of stone.</p>
 <p id="mammoth"><b>Mammoth</b>: any large, <a href="img/mammoth1.jpg"> elephantlike mammal</a> of the extinct genus Mammuthus, from the Pleistocene Epoch, having hairy skin and ridged molar teeth.</p>
 <p id="mastodon"><b> Mastodon</b>: a massive, <a href="img/mastodon1.jpg"> elephantlike mammal</a> of the genus Mammut (Mastodon), that flourished worldwide from the Miocene through the Pleistocene epochs and, in North America, into recent times, having long, curved upper tusks and, in the male, short lower tusks.</p>
@@ -90,14 +90,14 @@
 <p><b>Post mold / post hole</b>: a type of feature; a circular stain left in the ground after a wooden post has decayed; usually indicates the former existence of a house or fence.</p>
 <p><b>Prehistoric</b>: the period of time before written records; the absolute date for the prehistoric period varies from place to place.</p>
 <p><b>Projectile point</b>: a general term for stone points that were hafted to darts, spears or arrows; often erroneously called "arrowheads".</p>
-	<p id="carbon"><b>Radiocarbon dating</b>: a method for determining the age of an object containing organic material by using the properties of radiocarbon (C14), a radioactive isotope of carbon.</p>
-	<p><b>Rock art</b>: a general term for pecked, incised, or painted figures on rock.</p>
+<p id="carbon"><b>Radiocarbon dating</b>: a method for determining the age of an object containing organic material by using the properties of radiocarbon (C14), a radioactive isotope of carbon.</p>
+<p><b>Rock art</b>: a general term for pecked, incised, or painted figures on rock.</p>
 <p id="sherd"><b>Sherd</b>: a broken fragment of pottery.</p>
-	<p><b>Site</b>: a place where human activity occurred and material remains were deposited.</p>
+<p><b>Site</b>: a place where human activity occurred and material remains were deposited.</p>
 <p><b>Site steward</b>:  a volunteer who visits a site and helps protect it form vandalism and looting.</p>
-<p><b>Strata</b>: many layers of earth or levels in an archaeological site (singular stratum).</p>
-	<p id="stratified"><b>Stratified</b>: divided into distinct layers. </p>
-	<p><b>Stratigraphy</b>: the layering of deposits in archaeological sites. Cultural remains and natural sediments become buried over time, forming strata.</p>
+<p id="strata"><b>Strata</b>: many layers of earth or levels in an archaeological site (singular stratum).</p>
+<p id="stratified"><b>Stratified</b>: divided into distinct layers. </p>
+<p><b>Stratigraphy</b>: the layering of deposits in archaeological sites. Cultural remains and natural sediments become buried over time, forming strata.</p>
 <p><b>Survey</b>: the systematic examination of the ground surface in search of archaeological sites.</p>
 <p><b>Test pit</b>: a small excavation unit dug to learn what the depth and character of the stratum might be, and to determine more precisely which strata contain artifacts and other material remains.</p>
 </body>
