--- a/glossary.html
+++ b/glossary.html
@@ -95,7 +95,7 @@
 <p id="sherd"><b>Sherd</b>: a broken fragment of pottery.</p>
 <p><b>Site</b>: a place where human activity occurred and material remains were deposited.</p>
 <p><b>Site steward</b>:  a volunteer who visits a site and helps protect it form vandalism and looting.</p>
-<p id="strata"><b>Strata</b>: many layers of earth or levels in an archaeological site (singular stratum).</p>
+<p id="Strata"><b>Strata</b>: many layers of earth or levels in an archaeological site (singular stratum).</p>
 <p id="stratified"><b>Stratified</b>: divided into distinct layers. </p>
 <p><b>Stratigraphy</b>: the layering of deposits in archaeological sites. Cultural remains and natural sediments become buried over time, forming strata.</p>
 <p><b>Survey</b>: the systematic examination of the ground surface in search of archaeological sites.</p>
