--- a/glossary.html
+++ b/glossary.html
@@ -87,6 +87,7 @@
 <p id="paleo-indian"><b>Paleo-Indian</b>: an archaeological classification for those people who inhabited the Americans during the Late Pleistocene, the end of the last Ice Age. </p>
 <p id="paleosol"><b>Paleosol</b>: a strata that was formed as a soil in a past geological period.</p>
 <p id="pictograph"><b>Pictograph</b>: a picture or symbol painted or drawn on to a surface, as opposed to engraved on to it.</p>
+<p id="plow"><b>Plow zone</b>: the top layer of the soil to the depth at which a plow will penetrate and disturb archaeological deposits.</p>
 <p id="postmold"><b>Post mold / post hole</b>: a type of feature; a circular stain left in the ground after a wooden post has decayed; usually indicates the former existence of a house or fence.</p>
 <p><b>Prehistoric</b>: the period of time before written records; the absolute date for the prehistoric period varies from place to place.</p>
 <p><b>Projectile point</b>: a general term for stone points that were hafted to darts, spears or arrows; often erroneously called "arrowheads".</p>
