--- a/glossary.html
+++ b/glossary.html
@@ -84,6 +84,7 @@
 <p id="midden"><b>Midden</b>: an area used for trash disposal.</p>
 <p id="middlearchaic"><b>Middle Archaic</b>: this archaeological classification is used for those people who lived here from about 8,000 to 5,000 years ago.  This was a time of changing climatic conditions in which the area may have become significantly drier and warmer than it is today.</p>	
 <p id="middlewoodland"><b>Middle Woodland</b>:in the classification of archaeological cultures, the Middle Woodland period spanned a period from roughly 200 BC to AD 500.</p> 
+<p id="ossuary"><b>Ossuary</b>: built structure to hold a number of burials. Archaeologically, the structure seldom remains.</p>
 <p id="paleo-indian"><b>Paleo-Indian</b>: an archaeological classification for those people who inhabited the Americans during the Late Pleistocene, the end of the last Ice Age. </p>
 <p id="paleosol"><b>Paleosol</b>: a strata that was formed as a soil in a past geological period.</p>
 <p id="pictograph"><b>Pictograph</b>: a picture or symbol painted or drawn on to a surface, as opposed to engraved on to it.</p>
