--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	<title><center>Timeline of Michigan Archaeology</center></title>
+	<title>Timeline of Michigan Archaeology</title>
 
 
 <link rel="stylesheet" href="css/jquery-ui-1.8.5.custom.css" type="text/css" media="screen" title="no title" charset="utf-8">
@@ -25,7 +25,7 @@
 <body>
 
 <div class='header'>
-<h1>Timeline of Michigan Archaeology</h1>
+	<h1><center>Timeline of Michigan Archaeology</center></h1>
 </div>
 
 <p class='intro'>The alpha version of the timeline. If you are viewing this timeline now, please be aware that the information contained in it is NOT the final version and may not be accurate.</p>
