--- a/intro.html
+++ b/intro.html
@@ -41,7 +41,7 @@
 <h1>The Development of the Archaeological Timeline of Michigan</h1>
 <p>This project was conceived in part thanks to a CHI fellowship through Michigan State University.  I wanted to create an easy to use, creative, and simple way to demonstrate the depth of history in Michigan.</p>
 </div>
-<p>Here you will find the results of my work: an interactive timeline highlighting some of the most significant archaeological sites throughout Michigan.</p>
+<p>Here you will find the results of my work: an interactive timeline highlighting some of the most significant archaeological sites throughout Michigan.  The specific sites/events for my timeline were chosen from those archaeological sites that have been listed to the <a href="https://www.nps.gov/Nr/">National Register of Historic Places.</a> The National Register is the master list of those archaeological sites, historic structures, and other types of properties that have been deemed nationally important to our history.</p>
 
 
 	
