--- a/intro.html
+++ b/intro.html
@@ -42,6 +42,7 @@
 <p>This project was conceived in part thanks to a CHI fellowship through Michigan State University.  I wanted to create an easy to use, creative, and simple way to demonstrate the depth of history in Michigan.</p>
 </div>
 <p>Here you will find the results of my work: an interactive timeline highlighting some of the most significant archaeological sites throughout Michigan.  The specific sites/events for my timeline were chosen from those archaeological sites that have been listed to the <a href="https://www.nps.gov/Nr/">National Register of Historic Places.</a> The National Register is the master list of those archaeological sites, historic structures, and other types of properties that have been deemed nationally important to our history.</p>
+<p> Sites listed to the National Register meet one of four main criteria: A) associated with events that have made a significant contribution to the broad patterns of our history, B) associated with the lives of significant persons in our past, C) embody the distinctive characteristics of a type, period, or method of construction, or that represent the work of a master, or that possess high artistic values, or that represent a significant and distinguishable entity whose components may lack individual distinction, and lastly, D) have yielded or may be likely to yield, information important in history or prehistory.  Most archaeological sites are listed because of criterion D for the potential to reveal more information about prehistory.</p>
 
 
 	
