--- a/references.html
+++ b/references.html
@@ -50,6 +50,9 @@
 	<p> Shott, Michael J. and Henry T. Wright. 1999. The Paleo-Indians: Michigan's First People. In <i> Retrieving Michigan's Buried Past: The Archaeology of the Great Lakes State.</i> Pp. 59-70. Edited by John R. Halsey. Cranbrook Institute of Science, Bulletin 64.</p> 
 	<h2> Websites </h2>
 	<p> National Register of Historic Places website, www.nps.gov/NR/ </p>
+	<h2> Other Sources </h2>
+	<p> Michigan Archaeological Site File,<a href="http://www.michigan.gov/mshda/0,4641,7-141-54317_19320_54320---,00.html"> State Historic Preservation Office.</a></p>
+	<p> National Register of Historic Places Nominations, on file at the Michigan State Historic Preservation Office. </p>
 	</body>
 </html>
 
