--- a/more_info.html
+++ b/more_info.html
@@ -64,7 +64,7 @@ height:120px;
 
 
 <p> Halsey, John, editor.  1999. <i> Retrieving Michigan's Buried Past: The Archaeology of the Great Lakes State.</i> Cranbrook Institute of Science, Bulletin 64. </p>
-
+	<p> Michigan Archaeological Society <a href="http://www.miarch.org/">webpage</a> </p>
 
 
 </body>
