--- a/more_info.html
+++ b/more_info.html
@@ -58,7 +58,8 @@ height:120px;
 
 <div class='tg-sample-header'>
 
-<h1>To learn more about Michigan archaeology, check out some of these sources.</h1>
+<h1>To learn more about Michigan archaeology, </h1>
+	<h2>check out some of these sources.</h2>
 
 </div>
 
