--- a/more_info.html
+++ b/more_info.html
@@ -59,7 +59,7 @@ height:120px;
 <div class='tg-sample-header'>
 
 <h1>To learn more about Michigan archaeology, </h1>
-	<h2>check out some of these sources.</h2>
+	<h2>Check out some of these sources.</h2>
 
 </div>
 
