--- a/references.html
+++ b/references.html
@@ -47,7 +47,10 @@
 <p> Kozlowski, Kim. 2016. <i> Mastodon bones discovered in Michigan's thumb region. </i> <a href="Mastodon.pdf"> Detroit News.</a> </p>
 <p> Luedtke, Barbara. 1976. <i> Lithic Material Distributions and Interaction Patterns During the Late Woodland Period in Michigan.</i> PhD Dissertation, Department of Anthropology, University of Michigan, Ann Arbor. </p> 
 <p> Quimby, George I. 1966. <i> The Dumaw Creek Site: a Seventeenth Century Prehistoric Indian Village and Cemetery in Oceana County, Michigan.</i>Fieldiana: Anthropology 56(1). Field Museum of Natural History.</p>
+		<p> Shott, Michael J. 1993. The Leavitt Site: A Parkhill Phase Paleo-Indian Occupation in Central Michigan. Memoirs, Museum of Anthropology, University of Michigan, No. 25.</p>
 	<p> Shott, Michael J. and Henry T. Wright. 1999. The Paleo-Indians: Michigan's First People. In <i> Retrieving Michigan's Buried Past: The Archaeology of the Great Lakes State.</i> Pp. 59-70. Edited by John R. Halsey. Cranbrook Institute of Science, Bulletin 64.</p> 
+
+	
 	<h2> Websites </h2>
 	<p> National Register of Historic Places website, www.nps.gov/NR/ </p>
 	<h2> Other Sources </h2>
